# EEG-Classifiers-Ensemble

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  _version.py  mBrain_24ch_locations.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  share.py
BigProject/CNNResults/: cnn_hyperparam_data_best4.txt  cnn_hyperparam_data_processing.txt
CCSPNet/: CCSPNet.ipynb
Code/: KNN_probs.py  data_classification.py  data_loaders.py  data_utils.py  df_extractions.csv  random_forest_probs.py
Code/Abandoned/: notes.md
Code/BigProject/: CNN_LSTM_probs.py  GRU_probs.py  LSTM_probs.py  project_combine_cnn_lstm_run_3.ipynb  project_gru_keras_tsamp50.ipynb  project_lstm_keras_tsamp50.ipynb
Code/CCSPNet/: CCSPNet.ipynb  CCSPNet_original.ipynb  ccspnet.py  ccspnet_probs.py  ccspnet_refactored.py
Code/Extraction/: Entropy.py
Code/KNN/: KNN_probs.py
Code/LMDA-Code/: data_loader.py  main_BCIIV2a.py  main_LMDA.py  main_aguilera.py
Code/LMDA_Code/: compared_models.py  data_loader.py  (+4 more)
LMDA-Code/: data_loader.py  main_BCIIV2a.py
processing_eeg_methods/: 2_Two_Classes_Classification_(BNCI)_Colab_edited.ipynb  Entropy.py  KNN_probs.py  README.md  classifiers_classes.py  data_classification.py  data_dataclass.py  data_loaders.py  data_preprocess.py  data_utils.py  diffE_evaluation.py  diffE_models.py  get_features.ipynb  get_transforms.ipynb  main.py  myModel.pth  plot_ERDS.ipynb  plot_ERDS_backup_code.ipynb  plot_ERP.ipynb  share.py
test_processing_eeg_methods/: test_data_classification.py  test_data_utils.py
(+198 files in other folders)
